[gd_scene load_steps=7 format=3 uid="uid://b8jievj3bx0vr"]

[ext_resource type="Script" uid="uid://bmidfqiy10h5g" path="res://weapons/base_weapon.gd" id="1_xvpeq"]
[ext_resource type="PackedScene" uid="uid://brnph4das8y21" path="res://weapons/weapon_assets/muzzle_flash.tscn" id="2_ad7do"]
[ext_resource type="Texture2D" uid="uid://crqqo3jcq6ysb" path="res://weapons/weapon_assets/Hit-Marker-PNG-Photo.png" id="3_faegt"]

[sub_resource type="Animation" id="Animation_g61sl"]
resource_name = "Shoot"

[sub_resource type="Animation" id="Animation_3fcx8"]
resource_name = "Reload"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drkv3"]
_data = {
&"Reload": SubResource("Animation_3fcx8"),
&"Shoot": SubResource("Animation_g61sl")
}

[node name="BaseWeapon" type="Node3D"]
script = ExtResource("1_xvpeq")
clip_size = 30
is_automatic = true

[node name="Model" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29587653, -0.75376093)

[node name="MuzzleFlash" parent="Marker3D" instance=ExtResource("2_ad7do")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HitMarker" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(256, 256)
texture = ExtResource("3_faegt")

[node name="ReloadLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
text = "reload"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_drkv3")
}
